<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="90dp">

    <RelativeLayout
        android:id="@+id/quite_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/paint_dialog_bg"
        android:paddingBottom="30dp"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/paint_quite_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:text="@string/paint_quite_tips"
            android:textColor="@color/color_612810"
            android:textSize="16sp"/>

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/paint_quite_tip"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/view"
            android:background="@drawable/paint_cancel"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="@string/paint_yes"
            android:textColor="@color/color_E29936"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/paint_quite_tip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/view"
            android:background="@drawable/paint_sure"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="@string/paint_no"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </RelativeLayout>
</RelativeLayout>